[package]
name = "cargo-l1x"
version = "0.1.1"
edition = "2021"
authors = ["The L1X Project Developers"]
license = "Apache-2.0"
keywords = ["l1x"]
readme = "README.md"
description = """
L1X build tool
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l1x-wasm-llvmir = "0.2.1"
cargo_metadata = "0.18.1"
serde_json = "1.0.116"
anyhow = "1.0.82"
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
zip = "1.1.1"
colored = "2.1.0"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
zip = "1.1.1"
